force-app/main/default/objects/LeadDataScore__mdt/LeadDataScore__mdt.object-meta.xml
<CustomObject>
    <label>Lead Data Quality Score</label>
    <pluralLabel>Lead Data Quality Scores</pluralLabel>
</CustomObject>