force-app/main/default/objects/LeadDataScore__mdt/fields/Email_Phone_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Email_Phone_MobilePhone__c</fullName>
    <label>Email Phone MobilePhone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>