force-app/main/default/objects/LeadDataScore__mdt/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>