force-app/main/default/objects/LeadDataScore__mdt/fields/Freight_Controlling_Location__c.field-meta.xml
<CustomField>
    <fullName>Freight_Controlling_Location__c</fullName>
    <label>Controlling Location Approver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>