force-app/main/default/objects/LeadDataScore__mdt/fields/Freight_Corporate_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Freight_Corporate_Identifier__c</fullName>
    <label>FCI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>