force-app/main/default/objects/LeadDataScore__mdt/fields/Freight_eQ_Customer__c.field-meta.xml
<CustomField>
    <fullName>Freight_eQ_Customer__c</fullName>
    <label>Customer #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>