force-app/main/default/objects/LeadDataScore__mdt/fields/Freight_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Freight_Revenue_Stream__c</fullName>
    <label>Freight Revenue Stream</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>