force-app/main/default/objects/LeadDataScore__mdt/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>