force-app/main/default/objects/LeadDataScore__mdt/fields/IATA_Type__c.field-meta.xml
<CustomField>
    <fullName>IATA_Type__c</fullName>
    <label>IATA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IATA</fullName>
                <default>true</default>
                <label>IATA</label>
            </value>
            <value>
                <fullName>Non IATA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>