force-app/main/default/objects/LeadDataScore__mdt/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>