force-app/main/default/objects/LeadDataScore__mdt/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>