force-app/main/default/objects/LeadDataScore__mdt/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <label>Legal Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>