force-app/main/default/objects/LeadDataScore__mdt/fields/Revenue_Stream_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Stream_Type__c</fullName>
    <label>Revenue Stream Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>