force-app/main/default/objects/LeadDataScore__mdt/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Account Street</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>